manifests/tekton-workloads/event-listeners/homelab-kube-cluster/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-kube-cluster
  namespace: homelab-kube-cluster
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1/hooks
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tekton-el.homelab.danmanners.com
  rules:
  - host: tekton-el.homelab.danmanners.com
    http:
      paths:
      - path: /github.com/danmanners/homelab-kube-cluster(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: el-github-pr
            port:
              number: 80
